--- a/src/notebooks/check data.ipynb
+++ b/src/notebooks/check data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "f8e492d5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "6f5e8afc",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "01548243",
    "metadata": {},
    "outputs": [],
@@ -1721,13 +1721,7 @@
       "[14:13:56] ERROR: Explicit valence for atom # 3 C, 5, is greater than permitted\n",
       "[14:13:56] Explicit valence for atom # 3 C, 5, is greater than permitted\n",
       "[14:13:56] ERROR: Could not sanitize molecule ending on line 310715\n",
-      "[14:13:56] ERROR: Explicit valence for atom # 3 C, 5, is greater than permitted\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[14:13:56] ERROR: Explicit valence for atom # 3 C, 5, is greater than permitted\n",
       "  6%|█████████▉                                                                                                                                                  | 8477/133885 [00:08<02:14, 931.55it/s][14:13:56] Explicit valence for atom # 1 C, 5, is greater than permitted\n",
       "[14:13:56] ERROR: Could not sanitize molecule ending on line 314632\n",
       "[14:13:56] ERROR: Explicit valence for atom # 1 C, 5, is greater than permitted\n",
