--- a/src/notebooks/preprocessing.ipynb
+++ b/src/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3a3ef6d4",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "b68768e4",
    "metadata": {},
    "outputs": [],
@@ -12014,36 +12014,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9618477a",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "from data_processing.paired_data import PharmacophoreDataset\n",
-    "dataset = PharmacophoreDataset(root='../../data/small_dataset', split='all')"
+    "from data_processing.paired_data import PharmacophoreDataset, CombinedSparseGraphDataset\n",
+    "dataset = CombinedSparseGraphDataset(root='../../data/small_dataset', split='all')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "077447cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Data(x=[1, 86, 13], pos=[1, 86, 3], target_x=[1, 86, 13], target_pos=[1, 86, 3], CoM=[1, 3], node_mask=[1, 86], edge_mask=[1, 7396], node_pp_index=[1, 86], ligand_name='4rlt_A_rec_4rlw_bun_lig_tt_min_0', num_nodes=24)"
+       "Data(x=[66, 12], pos=[66, 3], target_x=[66, 12], target_pos=[66, 3], Gt_mask=[66], ligand_name='3wb0_A_rec_3wb2_ygp_lig_tt_min_0')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dataset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fcc47bb9",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]),\n",
+       " tensor([[ 25.0937, -17.7146,  29.4568],\n",
+       "         [ 24.6845, -16.3871,  29.7221],\n",
+       "         [ 26.4090, -17.7035,  28.6599],\n",
+       "         [ 27.5021, -18.0881,  29.4626],\n",
+       "         [ 26.5099, -16.2674,  28.1939],\n",
+       "         [ 27.8360, -15.8044,  28.0781],\n",
+       "         [ 25.6843, -15.5163,  29.2400],\n",
+       "         [ 24.5678, -21.9571,  28.2788],\n",
+       "         [ 25.4770, -23.0140,  28.5850],\n",
+       "         [ 23.9677, -19.7022,  28.3859],\n",
+       "         [ 22.8296, -19.9356,  27.6966],\n",
+       "         [ 22.5284, -21.2213,  27.2734],\n",
+       "         [ 21.4711, -21.4664,  26.6336],\n",
+       "         [ 23.4146, -22.2193,  27.5746],\n",
+       "         [ 24.8494, -20.6835,  28.6929],\n",
+       "         [ 22.1254, -18.7986,  27.5440],\n",
+       "         [ 22.9025, -17.8789,  28.1800],\n",
+       "         [ 24.0389, -18.4053,  28.7092],\n",
+       "         [ 25.0371, -14.2453,  28.6813],\n",
+       "         [ 24.2762, -14.5669,  27.5392],\n",
+       "         [ 23.5297, -13.1511,  26.9538],\n",
+       "         [ 22.8599, -13.4675,  25.4328],\n",
+       "         [ 24.5503, -12.0426,  26.8253],\n",
+       "         [ 22.2771, -12.6550,  28.0278],\n",
+       "         [ 21.4243, -13.5275,  28.7261],\n",
+       "         [ 20.8164, -14.6367,  28.1107],\n",
+       "         [ 20.0002, -15.4914,  28.8604],\n",
+       "         [ 19.3893, -16.7031,  28.2209],\n",
+       "         [ 19.8211, -15.2617,  30.1909],\n",
+       "         [ 20.3858, -14.1928,  30.8167],\n",
+       "         [ 20.1922, -14.0273,  32.0521],\n",
+       "         [ 21.1828, -13.2851,  30.0916],\n",
+       "         [ 21.8457, -12.1186,  30.7801],\n",
+       "         [ 23.3653, -16.5570,  28.4434],\n",
+       "         [ 23.3800, -16.5679,  28.4546],\n",
+       "         [ 23.3823, -16.5560,  28.4497],\n",
+       "         [ 23.3774, -16.5593,  28.4413],\n",
+       "         [ 23.3606, -16.5756,  28.4502],\n",
+       "         [ 23.3821, -16.5734,  28.4461],\n",
+       "         [ 23.3503, -16.5579,  28.4425],\n",
+       "         [ 23.7020, -20.9590,  27.9775],\n",
+       "         [ 23.3699, -16.5671,  28.4376],\n",
+       "         [ 23.6968, -20.9683,  27.9772],\n",
+       "         [ 23.6919, -20.9556,  27.9981],\n",
+       "         [ 23.6750, -20.9606,  27.9837],\n",
+       "         [ 21.4761, -21.4681,  26.6214],\n",
+       "         [ 23.6786, -20.9498,  27.9972],\n",
+       "         [ 23.6908, -20.9576,  27.9783],\n",
+       "         [ 22.1275, -18.8037,  27.5224],\n",
+       "         [ 23.3832, -16.5618,  28.4441],\n",
+       "         [ 23.3820, -16.5468,  28.4492],\n",
+       "         [ 23.3893, -16.5657,  28.4569],\n",
+       "         [ 23.5397, -13.1550,  26.9691],\n",
+       "         [ 23.5293, -13.1348,  26.9477],\n",
+       "         [ 23.5257, -13.1619,  26.9520],\n",
+       "         [ 23.5408, -13.1475,  26.9518],\n",
+       "         [ 23.5379, -13.1648,  26.9439],\n",
+       "         [ 20.6179, -14.4094,  29.4538],\n",
+       "         [ 20.6082, -14.3867,  29.4540],\n",
+       "         [ 20.5992, -14.3895,  29.4769],\n",
+       "         [ 23.3554, -16.5580,  28.4634],\n",
+       "         [ 20.6027, -14.4095,  29.4614],\n",
+       "         [ 20.6035, -14.4076,  29.4565],\n",
+       "         [ 23.3775, -16.5588,  28.4393],\n",
+       "         [ 20.5875, -14.3867,  29.4598],\n",
+       "         [ 23.3853, -16.5630,  28.4655]]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[0].x, dataset[0].pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2fb3d418",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[0].target_x"
    ]
   },
   {
