--- a/src/notebooks/preprocessing.ipynb
+++ b/src/notebooks/preprocessing.ipynb
@@ -12014,7 +12014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "9618477a",
    "metadata": {
     "scrolled": true
@@ -12022,7 +12022,29 @@
    "outputs": [],
    "source": [
     "from data_processing.paired_data import PharmacophoreDataset, CombinedSparseGraphDataset\n",
-    "dataset = CombinedSparseGraphDataset(root='../../data/small_dataset', split='all')"
+    "# dataset = CombinedSparseGraphDataset(root='../../data/small_dataset', split='all')\n",
+    "dataset = CombinedSparseGraphDataset(root='../../data/cleaned_crossdocked_data', split='train')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c1e911f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "181471"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset)"
    ]
   },
   {
