--- a/src/notebooks/preprocessing.ipynb
+++ b/src/notebooks/preprocessing.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "3a3ef6d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -8452,7 +8461,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "490143c8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -11530,7 +11541,9 @@
    "cell_type": "code",
    "execution_count": 45,
    "id": "5fa4d9e5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -12014,7 +12027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "9618477a",
    "metadata": {
     "scrolled": true
@@ -12022,23 +12035,23 @@
    "outputs": [],
    "source": [
     "from data_processing.paired_data import PharmacophoreDataset, CombinedSparseGraphDataset\n",
-    "# dataset = CombinedSparseGraphDataset(root='../../data/small_dataset', split='all')\n",
-    "dataset = CombinedSparseGraphDataset(root='../../data/cleaned_crossdocked_data', split='train')"
+    "dataset = CombinedSparseGraphDataset(root='../../data/small_dataset', split='all')\n",
+    "# dataset = CombinedSparseGraphDataset(root='../../data/cleaned_crossdocked_data', split='train')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "c1e911f0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "181471"
+       "65"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12049,7 +12062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "077447cb",
    "metadata": {},
    "outputs": [
@@ -12059,7 +12072,7 @@
        "Data(x=[66, 12], pos=[66, 3], target_x=[66, 12], target_pos=[66, 3], Gt_mask=[66], ligand_name='3wb0_A_rec_3wb2_ygp_lig_tt_min_0')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12070,7 +12083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "fcc47bb9",
    "metadata": {
     "scrolled": true
@@ -12213,7 +12226,7 @@
        "         [ 23.3853, -16.5630,  28.4655]]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12224,7 +12237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "2fb3d418",
    "metadata": {
     "scrolled": true
@@ -12301,7 +12314,7 @@
        "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12312,17 +12325,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "4100777b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "67"
+       "65"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12348,58 +12361,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "id": "69d4a658",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'GlobalStorage' object has no attribute 'split'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[58], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m all_names \u001b[38;5;241m=\u001b[39m [file\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m dataset]\n\u001b[1;32m      2\u001b[0m all_names\n",
-      "Cell \u001b[0;32mIn[58], line 1\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0m all_names \u001b[38;5;241m=\u001b[39m [\u001b[43mfile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m dataset]\n\u001b[1;32m      2\u001b[0m all_names\n",
-      "File \u001b[0;32m~/miniconda3/envs/pp2drug/lib/python3.10/site-packages/torch_geometric/data/data.py:559\u001b[0m, in \u001b[0;36mData.__getattr__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    553\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_store\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m:\n\u001b[1;32m    554\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m    555\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object was created by an older version of PyG. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    556\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIf this error occurred while loading an already existing \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    557\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdataset, remove the \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprocessed/\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m directory in the dataset\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    558\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mroot folder and try again.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 559\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_store\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/pp2drug/lib/python3.10/site-packages/torch_geometric/data/storage.py:96\u001b[0m, in \u001b[0;36mBaseStorage.__getattr__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m     94\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[key]\n\u001b[1;32m     95\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[0;32m---> 96\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[1;32m     97\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     98\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'GlobalStorage' object has no attribute 'split'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "all_names = [file.split('/')[-1].split('.')[0] for file in dataset]\n",
-    "all_names"
+    "# all_names = [file.split('/')[-1].split('.')[0] for file in dataset]\n",
+    "# all_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "d783bf32",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'all_names' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m missing \u001b[38;5;241m=\u001b[39m [i \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[43mall_names\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m name]\n\u001b[1;32m      2\u001b[0m missing\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'all_names' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "missing = [i for i in all_names if i not in name]\n",
-    "missing"
+    "# missing = [i for i in all_names if i not in name]\n",
+    "# missing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "a42c525b",
    "metadata": {},
    "outputs": [],
@@ -12411,7 +12397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "3b7fc875",
    "metadata": {},
    "outputs": [],
@@ -12422,38 +12408,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e58c607e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch_geometric.loader.dataloader.DataLoader at 0x7f0191b46500>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_loader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "a5bbd4cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DataBatch(x=[5, 86, 13], pos=[5, 86, 3], target_x=[5, 86, 13], target_pos=[5, 86, 3], CoM=[5, 3], node_mask=[5, 86], edge_mask=[5, 7396], node_pp_index=[1, 430], ligand_name=[5], num_nodes=114, batch=[114], ptr=[6])"
+       "DataBatch(x=[216, 12], pos=[216, 3], target_x=[216, 12], target_pos=[216, 3], Gt_mask=[216], ligand_name=[5], batch=[216], ptr=[6])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12464,63 +12429,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "e15f5145",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[[0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 1., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 1., 0.,  ..., 0., 0., 0.],\n",
-       "         ...,\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-       "\n",
-       "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 1., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 1., 0.,  ..., 0., 0., 0.],\n",
-       "         ...,\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-       "\n",
-       "        [[0., 1., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 1., 0.,  ..., 0., 0., 0.],\n",
-       "         ...,\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-       "\n",
-       "        [[0., 1., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 1., 0.,  ..., 0., 0., 0.],\n",
-       "         ...,\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-       "\n",
-       "        [[0., 1., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 1., 0.,  ..., 0., 0., 0.],\n",
-       "         ...,\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "         [0., 0., 0.,  ..., 0., 0., 0.]]])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [1., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        ...,\n",
+      "        [1., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 1.,  ..., 0., 0., 0.],\n",
+      "        [1., 0., 0.,  ..., 0., 0., 0.]])\n"
+     ]
     }
    ],
    "source": [
-    "one.x"
+    "print(one.x)"
    ]
   },
   {
