--- a/src/notebooks/pp_matching.ipynb
+++ b/src/notebooks/pp_matching.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "2d0b1602",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ceba1eb0",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "c6118765",
    "metadata": {},
    "outputs": [],
@@ -1984,7 +1984,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "773a60a9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -14440,7 +14442,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "90154e06",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -35744,7 +35748,9 @@
    "cell_type": "code",
    "execution_count": 55,
    "id": "3c738838",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -36765,7 +36771,9 @@
    "cell_type": "code",
    "execution_count": 56,
    "id": "63f16cc2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
