--- a/src/notebooks/check_training.ipynb
+++ b/src/notebooks/check_training.ipynb
@@ -439,7 +439,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "id": "5bcec020",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -670,7 +672,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "08d8dc81",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -850,7 +854,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "8713f042",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1091,7 +1097,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "2d5a5806",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1285,7 +1293,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "5d683f4e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
