--- a/src/notebooks/pp_matching.ipynb
+++ b/src/notebooks/pp_matching.ipynb
@@ -73,7 +73,7 @@
     "## some mols in qm9 dataset have same smiles\n",
     "- smiles can not be used as the unique identifier of the mol\n",
     "\n",
-    "# TODO:\n",
+    "### TODO: (addressed)\n",
     "**In dataset preprocessing, pp info of mols with same smiles are not correctly saved**\n",
     "\n",
     "I did smt like this, but some smiles correspond to more than 2 mols, which causes iterated list...\n",
