--- a/src/notebooks/check_training.ipynb
+++ b/src/notebooks/check_training.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "6fe44159",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "cdca7f7d",
    "metadata": {},
    "outputs": [],
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "fbbd0fa7",
    "metadata": {},
    "outputs": [],
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "5b0a757e",
    "metadata": {},
    "outputs": [],
@@ -60,18 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a8146300",
    "metadata": {},
    "outputs": [],
    "source": [
     "# dataset = CombinedGraphDataset(root='../../data/small_dataset', split='all')\n",
-    "dataset = CombinedSparseGraphDataset(root='../../data/small_dataset', split='all')"
+    "# dataset = CombinedSparseGraphDataset(root='../../data/small_dataset', split='all')\n",
+    "dataset = CombinedSparseGraphDataset(root='../../data/cleaned_crossdocked_data', split='test', aromatic=True, filtering=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "82fa99f6",
    "metadata": {},
    "outputs": [],
@@ -81,17 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "72c945ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DataBatch(x=[140, 13], pos=[140, 3], target_x=[140, 13], target_pos=[140, 3], Gt_mask=[140], ligand_name=[3], batch=[140], ptr=[4])"
+       "DataBatch(x=[112, 12], pos=[112, 3], target_x=[112, 12], target_pos=[112, 3], Gt_mask=[112], ligand_name=[3], batch=[112], ptr=[4])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "384cf34a",
    "metadata": {},
    "outputs": [],
@@ -114,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "1cce209c",
    "metadata": {
     "scrolled": true
@@ -123,16 +115,16 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "tensor([[0., 1., 0.,  ..., 0., 0., 0.],\n",
        "        [0., 1., 0.,  ..., 0., 0., 0.],\n",
-       "        [0., 1., 0.,  ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 1.,  ..., 0., 0., 0.],\n",
        "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "        [1., 0., 0.,  ..., 0., 0., 0.]])"
+       "        ...,\n",
+       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "7b7b08f2",
    "metadata": {
     "scrolled": true
@@ -156,12 +148,12 @@
        "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
        "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
        "        ...,\n",
-       "        [0., 0., 1.,  ..., 0., 0., 0.],\n",
        "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "        [1., 0., 0.,  ..., 0., 0., 0.]])"
+       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
