--- a/src/notebooks/check_sample.ipynb
+++ b/src/notebooks/check_sample.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a5ebc7ba-f1e1-4132-af61-821fefa40e50",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
     "from model.pp_bridge_sampler import PPBridgeSampler\n",
     "from model.utils.utils_diffusion import center2zero_combined_graph, center2zero_with_mask, center2zero\n",
     "from script_utils import load_data\n",
-    "from evaluation.utils import build_pdb_dict"
+    "from evaluation.utils_eval import build_pdb_dict"
    ]
   },
   {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "43f79a3e-2ba8-42f3-9130-e2e6b8fc70ca",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "eff438ad-9d7a-4ea9-bf7e-9660fb45293b",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "5e8ea903-b7c0-4317-8494-e93341367ea7",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "torch.Size([47288, 3])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
