--- a/src/notebooks/Sample.ipynb
+++ b/src/notebooks/Sample.ipynb
@@ -273,12 +273,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "d067cab6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = '/home/conghao001/pharmacophore2drug/PP2Drug/data/cleaned_crossdocked_data'\n",
+    "root = '/home2/conghao001/pharmacophore2drug/PP2Drug/data/cleaned_crossdocked_data'\n",
     "split = 'test'\n",
     "batch_size = 10\n",
     "num_workers = 0"
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "b338e615",
    "metadata": {
     "scrolled": true
@@ -296,11 +296,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "use processed_HDBSCAN_filtered\n",
-      "use processed_HDBSCAN_filtered\n",
-      "use processed_HDBSCAN_filtered\n",
-      "use processed_HDBSCAN_filtered\n",
-      "use processed_HDBSCAN_filtered\n"
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n"
      ]
     }
    ],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "835a9886-a348-49c1-9a99-58acb393e402",
    "metadata": {},
    "outputs": [],
@@ -324,17 +324,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "9a4cdcb1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30095"
+       "15235"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "dcf76884-65cc-4f9d-a7ec-07b68bec55de",
    "metadata": {},
    "outputs": [],
@@ -355,17 +355,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "cd016279",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DataBatch(x=[382, 12], pos=[382, 3], target_x=[382, 12], target_pos=[382, 3], Gt_mask=[382], ligand_name=[10], batch=[382], ptr=[11])"
+       "DataBatch(x=[562, 12], pos=[562, 3], target_x=[562, 12], target_pos=[562, 3], Gt_mask=[562], ligand_name=[10], batch=[562], ptr=[11])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,6 +374,57 @@
     "one = next(iter(dataloader))\n",
     "one = one.to(device)\n",
     "one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4aa4d6a6-681e-47f7-b266-89bc65be0759",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2z9y_A_rec_2z9y_ddr_lig_tt_min_0',\n",
+       " '2e3m_A_rec_2e3n_6cm_lig_tt_min_0',\n",
+       " '3h3r_A_rec_3h3t_16h_lig_tt_min_0',\n",
+       " '3h3q_A_rec_3h3q_h13_lig_tt_min_0',\n",
+       " '3h3s_B_rec_3h3t_16h_lig_tt_min_0',\n",
+       " '2z9z_A_rec_3h3q_h13_lig_tt_docked_17',\n",
+       " '2z9z_A_rec_3h3r_14h_lig_tt_min_0',\n",
+       " '3h3r_A_rec_3h3q_h13_lig_tt_min_0',\n",
+       " '2z9z_A_rec_2z9y_ddr_lig_tt_min_0',\n",
+       " '3h3q_A_rec_3h3r_14h_lig_tt_min_0']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one.ligand_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9ce5994b-59e2-4f76-a632-a41dd73ddcb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one.ligand_name.index('3h3q_A_rec_3h3r_14h_lig_tt_min_0')"
    ]
   },
   {
